<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/surface"
    android:padding="@dimen/spacing_lg">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_confirmation_title"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_size_large"
        android:gravity="center" />

    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/delete_confirmation_message"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_size_medium"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnDialogCancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/spacing_sm"
            style="@style/Widget.MegaLife.Button"
            android:text="@string/btn_cancel"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <Button
            android:id="@+id/btnDialogDelete"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/spacing_sm"
            style="@style/Widget.MegaLife.Button"
            android:text="@string/btn_delete"
            android:focusable="true"
            android:focusableInTouchMode="true" />
    </LinearLayout>

</LinearLayout>
